--- a/system-programming/Threads/02-WinForms/FilesInCatalog/FilesInCatalog/FilesInCatalog.csproj
+++ b/system-programming/Threads/02-WinForms/FilesInCatalog/FilesInCatalog/FilesInCatalog.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9592F9F6-48CE-4F53-8469-4B25B89843A8}</ProjectGuid>
+    <ProjectGuid>{D6BC3FFB-5E69-4587-A2DA-94C21D2B9D9E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SumCounter</RootNamespace>
-    <AssemblyName>SumCounter</AssemblyName>
+    <RootNamespace>FilesInCatalog</RootNamespace>
+    <AssemblyName>FilesInCatalog</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,17 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FromCount.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FromCount.Designer.cs">
-      <DependentUpon>FromCount.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThreadTimer.cs" />
-    <EmbeddedResource Include="FromCount.resx">
-      <DependentUpon>FromCount.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
