--- a/system-programming/Threads-Synh/ExamProj/ExamProj/ExamProj.csproj
+++ b/system-programming/Threads-Synh/ExamProj/ExamProj/ExamProj.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CensoredFileInfo.cs" />
+    <Compile Include="ReportFile.cs" />
+    <Compile Include="Word.cs" />
     <EmbeddedResource Include="Cens.resx">
       <DependentUpon>Cens.cs</DependentUpon>
     </EmbeddedResource>
